syntax = "proto3";
package proto;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "proto/task.proto";

message UserServiceResponse {
  int64 status = 1;
  string message = 2;
  int64 count = 3;
  repeated User users = 4;
}

message User {
  int64 id  = 1;
  string name = 2;
  oneof age_optional {
    int64 age = 3; // 0とnilを区別するOptional値の表現
  }
  repeated Task tasks = 4;
  bool clearTasks = 5;
}

message UserServiceSelector {
  int64  id  = 1;
}

service UserService {

   rpc Create(User) returns (UserServiceResponse) {
     option (google.api.http) = {
       post: "/v1/users"
       body: "*"
     };
   }

   rpc Read(UserServiceSelector) returns (UserServiceResponse) {
     option (google.api.http) = {
       get: "/v1/users/{id}"
     };
   }

   rpc ReadAll(google.protobuf.Empty) returns (UserServiceResponse) {
     option (google.api.http) = {
       get: "/v1/users"
     };
   }

   rpc Update(User) returns (UserServiceResponse) {
     option (google.api.http) = {
       post: "/v1/users/{id}"
       body: "*"
     };
   }

   rpc Delete(UserServiceSelector) returns (UserServiceResponse) {
     option (google.api.http) = {
       delete: "/v1/users/{id}"
     };
   }
}
